--- a/src/app/warranty-list/warranty-list.component.html
+++ b/src/app/warranty-list/warranty-list.component.html
@@ -1,31 +1,46 @@
-<!-- warranty-list.component.html -->
-<div class="header">
-    <h1>Warranty App</h1>
-    <input type="text" [(ngModel)]="searchTerm" (input)="search()" placeholder="Search warranties...">
 
-  </div>
-  <table>
-    <thead>
-      <tr>
-        <th>Full Name</th>
-        <th>Serial Number</th>
-        <th>Manufacturer</th>
-        <th>Model</th>
-        <th>Purchase Date</th>
-        <th>Warranty in Years</th>
-        <th>Extra Care</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let warranty of filteredWarranties">
-        <td>{{ warranty.fullName }}</td>
-        <td>{{ warranty.serialNumber }}</td>
-        <td>{{ warranty.manufacturer }}</td>
-        <td>{{ warranty.model }}</td>
-        <td>{{ warranty.purchaseDate | date: 'dd.MM.yyyy' }}</td>
-        <td>{{ warranty.warrantyInYears }}</td>
-        <td>{{ warranty.extraCare ? 'Yes' : 'No' }}</td>
-      </tr>
-    </tbody>
-  </table>
-  
+<div class="header">
+  <h1>Warranty App</h1>
+  <input type="text" [(ngModel)]="searchTerm" (input)="search()" placeholder="Search warranties...">
+</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="fullName">
+    <th mat-header-cell *matHeaderCellDef>Full Name</th>
+    <td mat-cell *matCellDef="let element">{{ element.fullName }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="serialNumber">
+    <th mat-header-cell *matHeaderCellDef>Serial Number</th>
+    <td mat-cell *matCellDef="let element">{{ element.serialNumber }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="manufacturer">
+    <th mat-header-cell *matHeaderCellDef>Manufacturer</th>
+    <td mat-cell *matCellDef="let element">{{ element.manufacturer }}</td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="model">
+    <th mat-header-cell *matHeaderCellDef>Model</th>
+    <td mat-cell *matCellDef="let element">{{ element.model }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="purchaseDate">
+    <th mat-header-cell *matHeaderCellDef>Purchase Date</th>
+    <td mat-cell *matCellDef="let element">{{ element.purchaseDate | date: 'dd.MM.yyyy' }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="warrantyInYears">
+    <th mat-header-cell *matHeaderCellDef>Warranty in Years</th>
+    <td mat-cell *matCellDef="let element">{{ element.warrantyInYears }}</td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="extraCare">
+    <th mat-header-cell *matHeaderCellDef>Extra Care</th>
+    <td mat-cell *matCellDef="let element">{{ element.extraCare ? 'Yes' : 'No' }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
