--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-/* styles.css */
+
 body {
     font-family: 'Segoe UI', sans-serif;
     padding: 0;
@@ -20,3 +19,5 @@ body {
     padding: 20px;
   }
   
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
