--- a/src/app/warranty-list/warranty-list.component.css
+++ b/src/app/warranty-list/warranty-list.component.css
@@ -1,18 +1,40 @@
-
 .header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   margin-bottom: 20px;
 }
 
-input[type="text"] {
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-right: 20px;
-  width: 250px; 
+.search-bar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.search-button {
+  width: 100%;
+}
+
+.full-width-button {
+  width: 100%;
+  background-color: #5d8f7d;
+  color: white !important; 
+}
+
+.search-fields {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3px;
+  width: 100%;
+}
+
+.general-search {
+  flex-grow: 1;
+}
+
+mat-form-field {
+  flex: 1;
+  margin-right: 10px;
 }
 
 table {
@@ -20,7 +42,7 @@ table {
   border-collapse: collapse;
   margin: 20px 0;
   font-family: Arial, sans-serif;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
@@ -30,9 +52,9 @@ th, td {
 }
 
 th {
-  background-color: #5d8f7d; 
-  color:  #5d8f7d;             
-  font-weight: bold;     
+  background-color: #5d8f7d;
+  color: #5d8f7d;
+  font-weight: bold;
 }
 
 tr:nth-child(even) {
@@ -52,11 +74,16 @@ table tr:first-child th:last-child {
 }
 
 @media (max-width: 768px) {
-  th, td {
-      padding: 8px;
+  .search-fields {
+    flex-direction: column;
+  }
+
+  mat-form-field {
+    width: 100%;
+    margin-bottom: 10px;
   }
 
   input[type="text"] {
-      width: 100%; 
+    width: 100%;
   }
 }
